--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>Hello</p>
-    <p>This is a new repo</p>
+    <p>This is a new repo and modified in new</p>
 </body>
 </html>
